Fixed uneven heights

--- a/stylesheetv4.css
+++ b/stylesheetv4.css
@@ -37,13 +37,13 @@ user-select: none; /* Standard */
 
 .slide_img {
   display: block;
-  max-height:500px;
+  max-height:800px;
   width: auto;
   height: auto;
 }
 
 .scrolling-wrapper, .scrolling-wrapper-flexbox {
-  height: 500px;
+  height: 800px;
   margin-bottom: 20px;
   width: 100%;
   -webkit-overflow-scrolling: touch;
